project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carzonrent-qa
  labels:
    kubernetes.io/metadata.name: carzonrent-qa
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
