project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carzonrent-qa
  namespace: carzonrent-qa
  labels:
    app.kubernetes.io/name: carzonrent-qa
    app.kubernetes.io/part-of: printkeep
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: carzonrent-qa
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
