project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carzonrent-qa
  namespace: carzonrent-qa
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "2400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "2400"
spec:
  rules:
    - host: qa.carzonrent.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carzonrent-qa
                port:
                  name: http
